--- a/css/base.css
+++ b/css/base.css
@@ -147,9 +147,27 @@ header .rtLink{
 }
 .arrow-right {
     border: solid #bababa;
-    border-width: 0 2px 2px 0;
+    border-width: 0 4px 4px 0;
     display: inline-block;
-    padding: 2px;
+    padding: 8px;
     transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
+}
+.page-container {
+    background-color: #fff;
+    min-height: 100vh;
+}
+.line-clamp {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
+.line-clamp2 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
