--- a/css/base.css
+++ b/css/base.css
@@ -49,7 +49,7 @@ body{
     height: 100%;
     color: #000;
     font-family: 'Microsoft YaHei', 'Heiti SC', simhei, 'Lucida Sans Unicode', 'Myriad Pro', 'Hiragino Sans GB', Verdana;
-    background: #fff;
+    background: #f3f3f3;
     -webkit-tap-highlight-color:rgba(0,0,0,0);
     margin: 0;
 }
