--- a/css/base.css
+++ b/css/base.css
@@ -171,3 +171,13 @@ header .rtLink{
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
+.btn-submit {
+    width: 73%;
+    height: 86px;
+    line-height: 86px;
+    text-align: center;
+    margin: 72px auto;
+    color: #fff;
+    background-color: #00bc71;
+    font-size: 33px;
+}
