--- a/css/base.css
+++ b/css/base.css
@@ -185,4 +185,24 @@ header .rtLink{
     color: #fff;
     background-color: #00bc71;
     font-size: 33px;
+    z-index: 99;
+}
+
+#weui-picker-confirm {
+    position: absolute;
+    top: 20px;
+    right: 12px;
+    background: 0 0;
+    color: #000;
+    padding: 0;
+    text-align: right;
+}
+.weui-picker__item {
+    font-size: 40px;
+}
+.weui-half-screen-dialog__ft {
+    padding: 0!important;
+}
+.weui-half-screen-dialog__hd {
+    height: 100px!important;
 }
