--- a/css/pages/dialogue.css
+++ b/css/pages/dialogue.css
@@ -32,9 +32,10 @@
 }
 .dialogue-wrapper {
     padding: 0 28px;
+    margin-bottom: 88px;
 }
 .dialogue-content {
-    margin-top: 22px;
+    margin-top: 30px;
 }
 .tr {
     text-align: right;
@@ -46,6 +47,8 @@
     width: 116px;
     height: 116px;
     border-radius: 200px;
+    margin-right: 14px;
+    display: inline-block;
 }
 .dialogue-content .dialog {
     background-color: #fff;
@@ -58,6 +61,88 @@
     max-width: 50%;
     text-align: left;
     line-height: 40px;
-    top: 30px;
     border-radius: 10px;
+}
+.dialog .sendimg {
+    width: 220px;
+    height: 140px;
+    object-fit: contain;
+}
+.dialog-right {
+    padding-left: 10px;
+}
+.dialog .link-img {
+    width: 80px;
+    height: 80px;
+}
+.dialog .dialog-title {
+    font-size: 26px;
+    color: #5b5b5c;
+}
+.dialog .dialog-desc {
+    font-size: 24px;
+    color: #7e7e7e;
+}
+.dialogue-content .dialogue-img {
+    padding: 0
+}
+.add {
+    border: 1px solid #ececec;
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    padding: 10px;
+    border-radius: 200px;
+}
+.page-bottom {
+    position: fixed;
+    bottom: 0;
+    height: 88px;
+    line-height: 88px;
+    left: 0;
+    width: 100%;
+    background-color: #f3f3f3;
+    border-top: 2px solid #ececec;
+}
+.more-fun {
+    width: 100px;
+    text-align: center;
+    border-right: 2px solid #ececec;
+}
+.input-wrap  {
+    padding: 8px 14px;
+}
+.dialog-input {
+    width: 100%;
+    height: 70px;
+    vertical-align: super;
+    color: #333333;
+}
+.send {
+    font-size: 26px;
+    color: #5b5b5c;
+    width: 96px;
+    text-align: center;
+}
+.dialogue-content.tl .dialog::after {
+    content: " ";
+    width: 0;
+    height: 0;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    border-right: 20px solid white;
+    position: absolute;
+    top: 20%;
+    left: -20px;
+}
+.dialogue-content.tr .dialog::after {
+    content: " ";
+    width: 0;
+    height: 0;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    border-left: 20px solid white;
+    position: absolute;
+    top: 20%;
+    right: -20px;
 }
