--- a/css/pages/order.css
+++ b/css/pages/order.css
@@ -1,22 +1,155 @@
-.white-bg {
-    background-color: #fff;
-}
-
-.placeholder {
-    width: 100%;
-    height: 22px;
-}
 .page-line {
     background-color: #fff;
     padding: 32px 0;
 }
 .label {
-    padding: 0 27px;
     font-size: 26px;
-    color: #333;
+    color: #666;
     width: 140px;
 }
 .page-line .text {
     font-size: 26px;
+    color: #333;
+}
+.page-top {
+    background-color: #fff;
+    margin-bottom: 18px;
+    padding: 38px 28px;
+    font-size: 26px;
     color: #999;
+    position: relative;
+}
+.page-top .patient-info {
+    font-size: 29px;
+    color: #333;
+    margin-bottom: 30px;
+}
+.page-top .phone {
+    margin-left: 36px;
+}
+.page-top .location {
+    width: 24px;
+    vertical-align: middle;
+}
+.page-top .addr {
+    margin-left: 25px;
+}
+.page-top .arrow {
+    position: absolute;
+    width: 36px;
+    right: 4%;
+    top: 35%;
+}
+.order-wrapper {
+    background-color: #fff;
+    margin-bottom: 18px;
+    padding: 0 26px;
+}
+.title {
+    font-size: 29px;
+    color: #333;
+    font-weight: bolder;
+    position: relative;
+    padding: 30px 0;
+}
+.title-text {
+    flex-grow: 1;
+}
+.title-arrow {
+    width: 36px;
+    margin-left: 20px;
+}
+.send-type {
+    font-size: 26px;
+    color: #333;
+    margin-top: 40px;
+}
+.send-info {
+    font-size: 26px;
+    color: #999;
+    margin: 20px 0 36px;
+}
+.sletet {
+    width: 58px;
+    height: 58px;
+    margin-top: 50px;
+}
+.prescription-title {
+    padding-left: 26px;
+    padding-right: 26px;
+}
+.prescription {
+    background-color: #f3f3f3;
+    font-size: 26px;
+    color: #999;
+    padding: 30px 26px;
+    line-height: 50px;
+}
+.prescription-placeholder {
+    width: 56px;
+}
+.prescription-title .title-arrow {
+    transform: rotate(90deg);
+}
+.prescription-title .title-arrow.open {
+    transform: rotate(-90deg);
+}
+.page-line .text {
+    font-size: 26px;
+    color: #333;
+}
+.page-line .icon {
+    width: 48px;
+    padding: 0 27px;
+}
+.page-line.line2 {
+    padding: 22px 0;
+}
+.page-line.line2 .text {
+    padding-top: 10px;
+    flex-grow: 1;
+}
+.select {
+    border: 2px solid #e9e9e9;
+    border-radius: 200px;
+    width: 44px;
+    height: 44px;
+    margin-right: 27px;
+    position: relative;
+}
+.select.on span {
+    display: block;
+    border-radius: 200px;
+    width: 22px;
+    height: 22px;
+    background-color: #00bc71;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+    top: 12px;
+}
+.last-block {
+    margin-bottom: 168px;
+}
+.page-bottom  {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: #fff;
+    height: 88px;
+    line-height: 88px;
+    font-size: 33px;
+}
+.page-bottom-text {
+    flex-grow: 1;
+    color: #ffae00;
+    text-align: center;
+}
+.page-bottom-btn {
+    width: 290px;
+    text-align: center;
+    background-color: #00bc71;
+    color: #fff;
 }
