--- a/css/pages/doctor-detail.css
+++ b/css/pages/doctor-detail.css
@@ -102,23 +102,26 @@ body {
 .line-icon {
     vertical-align: middle;
     width: 24px;
+    height: 24px;
     margin-right: 9px;
 }
 .arrow-down {
-    border: solid #bababa;
-    border-width: 0 4px 4px 0;
-    display: inline-block;
-    padding: 10px;
-    transform: rotate(45deg) scale(.8);
-    -webkit-transform: rotate(45deg) scale(.8);
+    display: inline-block;  
+    border-top: 4px solid;
+    border-right: 4px solid;  
+    width: 20px;
+    height: 20px; 
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
 }
 .arrow-up {
-    border: solid #bababa;
-    border-width: 0 4px 4px 0;
-    display: inline-block;
-    padding: 10px;
-    transform: rotate(-135deg) scale(.8);
-    -webkit-transform: rotate(-135deg) scale(.8);
+    display: inline-block;  
+    border-top: 4px solid;
+    border-right: 4px solid;  
+    width: 20px;
+    height: 20px; 
+    transform: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
 }
 .line-content {
     font-size: 24px;
@@ -129,10 +132,11 @@ body {
 .judge {
     font-size: 26px;
     color: #00bc71;
+    margin-right: 10px;
 }
 .arrow-up,.arrow-down,.arrow-right {
-    transform: rotate(-45deg) scale(.8);
-    -webkit-transform: rotate(-45deg) scale(.8);
+    transform: rotate(45deg) scale(.8);
+    -webkit-transform: rotate(45deg) scale(.8);
 }
 
 
